--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <!-- Navbar Start -->
+      <!-- Navbar Begin -->
       <nav class="navbar">
         <div class="container">
           <div class="navlist">
