--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
       <!-- Navbar End -->
 
-      <!-- Hero Section Start -->
+      <!-- Hero Section Begin -->
       <section>
         <div class="bg">
           <div class="bg-text">
