--- a/index.html
+++ b/index.html
@@ -8,34 +8,9 @@
   </head>
   <body>
     <header>
-      <!-- Navbar Begin -->
-      <nav class="navbar">
-        <div class="container">
-          <div class="navlist">
-            <div class="logo-container">
-              <img src="Images/logo.png" alt="DocTime Logo" class="logo" />
-              <div class="logo-text">
-                <h1>DocTime<sup>™</sup></h1>
-                <p>Healthcare Anytime Anywhere</p>
-              </div>
-            </div>
-            <!-- Menu Icon -->
-            <div class="menu-icon" onclick="toggleMenu()">
-              <img src="../Images/menu-icon.svg" alt="" />
-            </div>
-            <ul class="navitem">
-              <li class="listItem">Consultation</li>
-              <li class="listItem">Health Plans</li>
-              <li class="listItem">Home Diagnostics</li>
-              <li class="listItem">Employers & NGOs</li>
-              <li class="listItem">For Doctors</li>
-            </ul>
-            <button class="btn">Log in</button>
-          </div>
-        </div>
-      </nav>
-      <!-- Navbar End -->
 
+      <div id="loader" class="loader">Loading...</div>
+      <header id="header"></header>
       <!-- Hero Section Begin -->
       <section>
         <div class="bg">
