--- a/index.html
+++ b/index.html
@@ -165,23 +165,34 @@
       <!-- Medical Content -->
       <section class="medical-section">
         <div class="medical-image">
-            <img src="doctor-image.jpg" alt="Woman experiencing headache">
+            <img src="/Images/head_pain.webp" alt="Woman experiencing headache">
         </div>
         <div class="medical-content">
             <h1>When to use DocTime</h1>
             <div class="medical-info">
-                <h3>Common health issue</h3>
+                <h4>Common health issue</h4>
                 <p>Ask anything you would normally ask your GP. You can have an instant video with one of our GPs via a digital consultation from anywhere, at any time of day.</p>
     
-                <h3>Specialist advice</h3>
+                <h4>Specialist advice</h4>
                 <p>Sometimes it’s helpful to see a specialist when you want. For gynecology, child specialists, dermatology, cardiology, gastroenterology, nutrition, chronic diseases such as hypertension, or other conditions, DocTime can help you to connect with the right specialist doctor and to stay healthy. More than 20 different specialities are available on DocTime.</p>
     
-                <h3>Mental health and wellbeing</h3>
+                <h4>Mental health and wellbeing</h4>
                 <p>In a fast-paced world, it is important to monitor and protect your mental health and wellbeing. Doctors can help you stay healthy whether you have symptoms at home or in your workplace of stress, smoking, anxiety, bereavement, or depression.</p>
             </div>
         </div>
     </section>
+
+    <!-- Medical Content End -->
     </main>
+
+    <!-- easy step -->
+
+    <div class="step">
+       <h1>Easy Steps To Feel Better Rapidly</h1>
+        <p>You do not have to wait in line for hours or go to the hospital to take healthcare services. Easily consult a doctor in just 10 minutes on your device at home or office.</p>
+       </div>
+
+       <!-- easy step end -->
 
     <script src="script.js"></script>
   </body>
