--- a/nav/nav.html
+++ b/nav/nav.html
@@ -22,7 +22,7 @@
             <img src="../Images/menu-icon.svg" alt="" />
           </div>
           <ul class="navitem">
-            <li class="listItem">
+            <li id="consultation" class="listItem">
               <a href="./consultation.html">Consultation</a>
             </li>
             <li class="listItem">Health Plans</li>
@@ -30,9 +30,11 @@
             <li class="listItem">Employers & NGOs</li>
             <li class="listItem">For Doctors</li>
           </ul>
-          <button class="btn">Log in</button>
+          <!-- Add an ID to the button for easier targeting -->
+          <button id="loginBtn" class="btn" type="button">Log in</button>
         </div>
       </div>
     </nav>
+    <script src="./login.js"></script>
   </body>
 </html>
