--- a/consultation/consultation.html
+++ b/consultation/consultation.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="consultation.css" />
+     <link rel="stylesheet" href="../nav/nav.css" />
     <title>Consultation - Doctor Website</title>
   </head>
   <body>
     <!-- Header to insert the Navbar -->
-    <div id="loader" class="loader">Loading...</div>
     <header id="header"></header>
+    <!-- <div id="loader" class="loader">Loading...</div> -->
 
     <!-- Main Content for Consultation -->
     <main>
@@ -36,6 +37,6 @@
       </div>
     </main>
 
-    <script type="module" src="consultaiton.js"></script>
+    <script type="module" src="./consultation.js"></script>
   </body>
 </html>
