--- a/nav/nav.html
+++ b/nav/nav.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./nav.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="nav.css" />
+    <title>Navber</title>
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="navlist">
           <div class="logo-container">
-            <img src="Images/logo.png" alt="DocTime Logo" class="logo" />
+            <img src="../Images/logo.png" alt="DocTime Logo" class="logo" />
             <div class="logo-text">
               <h1>DocTime<sup>™</sup></h1>
               <p>Healthcare Anytime Anywhere</p>
@@ -23,7 +23,7 @@
           </div>
           <ul class="navitem">
             <li id="consultation" class="listItem">
-              <a href="./consultation.html">Consultation</a>
+              <a href="./consultation/consultation.html">Consultation</a>
             </li>
             <li class="listItem">Health Plans</li>
             <li class="listItem">Home Diagnostics</li>
@@ -35,6 +35,6 @@
         </div>
       </div>
     </nav>
-    <script src="./login.js"></script>
+   <script src="/script.js"></script>
   </body>
 </html>
