--- a/nav/nav.html
+++ b/nav/nav.html
@@ -23,18 +23,18 @@
           </div>
           <ul class="navitem">
             <li id="consultation" class="listItem">
-              <a href="./consultation/consultation.html">Consultation</a>
+              <a href="./Consultation/consultation.html">Consultation</a>
             </li>
             <li class="listItem">Health Plans</li>
             <li class="listItem">Home Diagnostics</li>
             <li class="listItem">Employers & NGOs</li>
             <li class="listItem">For Doctors</li>
           </ul>
-          <!-- Add an ID to the button for easier targeting -->
-          <button id="loginBtn" class="btn" type="button">Log in</button>
+          <button class="btn" type="button" onclick="window.location.href='../login/login.html'">
+            Log in
+          </button>
         </div>
       </div>
     </nav>
-   <script src="/script.js"></script>
   </body>
 </html>
