--- a/consultation/consultation.html
+++ b/consultation/consultation.html
@@ -3,39 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="consultation.css" />
-     <link rel="stylesheet" href="../nav/nav.css" />
+    <link rel="stylesheet" href="./consultation.css" />
+    <link rel="stylesheet" href="../nav/nav.css" />
     <title>Consultation - Doctor Website</title>
   </head>
   <body>
-    <!-- Header to insert the Navbar -->
-      <header id="header"></header>
+    <header>
+      <div id="header">
+              <!-- Header to insert the Navbar -->
+      </div>
+    </header>
 
     <!-- Main Content for Consultation -->
     <main>
       <div class="consultationContainer">
         <h1>Please select a speciality</h1>
         <div class="gridDiv" id="gridDiv">
-          <!-- <div class="card">
-            <div class="cardImgDiv">
-              <img
-                src="https://doctime-core-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/specialities/1/icon/EJy2QTfS3obDIMrqhjStpgjIxAckPqTihOjxV7u6.png"
-                alt=""
-              />
-            </div>
 
-            <div class="cardTextSide">
-              <h2>Cardiology</h2>
-              <p>
-                Cardiology is the branch of medicine dealing with disorders of
-                the heart and
-              </p>
-            </div>
-          </div> -->
+          <!-- Card content can be added here -->
+           
         </div>
       </div>
     </main>
 
-    <script type="module" src="./consultation.js"></script>
+    <!-- Include the loadHtml.js file -->
+    
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        loadHtml('../nav/nav.html', 'header'); // Ensure the path to nav.html is correct
+      });
+    </script>
+    <script type="module" src="consultation.js"></script>
+    <script src="../loadHtml.js"></script>
   </body>
 </html>
