--- a/login/login.html
+++ b/login/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="login-container">
+    <div id="loginForm" class="login-container">
         <h2>Login</h2>
         <form id="loginForm" action="login_process.php" method="post">
             <div class="form-group">
@@ -23,6 +23,7 @@
         </form>
         <div id="error-message" class="error-message"></div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="login.js"></script> 
 </body>
 </html>
