--- a/consultation/consultation.html
+++ b/consultation/consultation.html
@@ -4,35 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="consultation.css" />
-     <link rel="stylesheet" href="../nav/nav.css" />
+    <link rel="stylesheet" href="../nav/nav.css" />
     <title>Consultation - Doctor Website</title>
   </head>
   <body>
     <!-- Header to insert the Navbar -->
-      <header id="header"></header>
+    <header id="header"></header>
 
     <!-- Main Content for Consultation -->
     <main>
       <div class="consultationContainer">
         <h1>Please select a speciality</h1>
-        <div class="gridDiv" id="gridDiv">
-          <!-- <div class="card">
-            <div class="cardImgDiv">
-              <img
-                src="https://doctime-core-ap-southeast-1.s3.ap-southeast-1.amazonaws.com/specialities/1/icon/EJy2QTfS3obDIMrqhjStpgjIxAckPqTihOjxV7u6.png"
-                alt=""
-              />
-            </div>
-
-            <div class="cardTextSide">
-              <h2>Cardiology</h2>
-              <p>
-                Cardiology is the branch of medicine dealing with disorders of
-                the heart and
-              </p>
-            </div>
-          </div> -->
-        </div>
+        <div class="gridDiv" id="gridDiv"></div>
       </div>
     </main>
 
