--- a/landingPage.html
+++ b/landingPage.html
@@ -276,10 +276,11 @@
                 <li>Unlimited audio & video calls with doctors</li>
                 <li>Electronic Health Record (EHR)</li>
               </ul>
-              <a href="#" class="btn btn-primary w-100">Subscribe now</a>
+              <a href="#" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#subscribeModal">Subscribe now</a>
             </div>
           </div>
         </div>
+        
         <!-- Card 2 -->
         <div class="col-md-4">
           <div class="card">
@@ -290,7 +291,7 @@
                 <li>Unlimited audio & video calls with doctors</li>
                 <li>Electronic Health Record (EHR)</li>
               </ul>
-              <a href="#" class="btn btn-primary w-100">Subscribe now</a>
+              <a href="#" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#subscribeModal">Subscribe now</a>
             </div>
           </div>
         </div>
@@ -304,7 +305,7 @@
                 <li>Discount on health services</li>
                 <li>৳ 40,000 benefit on insurance</li>
               </ul>
-              <a href="#" class="btn btn-primary w-100">Subscribe now</a>
+              <a href="#" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#subscribeModal">Subscribe now</a>
             </div>
           </div>
         </div>
@@ -318,7 +319,7 @@
                 <li>Unlimited audio & video calls with doctors</li>
                 <li>৳ 350,000 benefit on insurance</li>
               </ul>
-              <a href="#" class="btn btn-primary w-100">Subscribe now</a>
+              <a href="#" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#subscribeModal">Subscribe now</a>
             </div>
           </div>
         </div>
@@ -331,13 +332,35 @@
                 <li>8 consultations with physicians</li>
                 <li>Weekly consultations with wellness instructors</li>
               </ul>
-              <a href="#" class="btn btn-primary w-100">Subscribe now</a>
+              <a href="#" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#subscribeModal">Subscribe now</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+    <!-- Modal -->
+<div class="modal fade" id="subscribeModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="subscribeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="subscribeModalLabel">Subscribe to a Plan</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h6>DocTime Health Care & Protection Plans</h6>
+        <p>Choose the best plan for your health and wellness needs.</p>
+        <!-- Add dynamic content if needed -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Proceed to Payment</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     
 
     <!-- LoadHtml Js -->
