Add footer and ngo

--- a/consultation/specialityList.html
+++ b/consultation/specialityList.html
@@ -121,6 +121,8 @@
       </main>
     </section>
 
+    <footer class="footer flexCenter"></footer>
+
     <script type="module" src="specialityList.js"></script>
   </body>
 </html>
