--- a/nav/nav.html
+++ b/nav/nav.html
@@ -27,10 +27,17 @@
             </li>
             <li class="listItem">Health Plans</li>
             <li class="listItem">Home Diagnostics</li>
-            <li class="listItem">Employers & NGOs</li>
+            <li class="listItem">
+              <a href="./Ngo/Ngo.html"> Employers & NGOs </a>
+            </li>
+
             <li class="listItem">For Doctors</li>
           </ul>
-          <button class="btn" type="button" onclick="window.location.href='../login/login.html'">
+          <button
+            class="btn"
+            type="button"
+            onclick="window.location.href='../login/login.html'"
+          >
             Log in
           </button>
         </div>
