--- a/consultation.html
+++ b/consultation.html
@@ -31,10 +31,13 @@
     
 
     <!-- Include the loadHtml.js file -->
-    
+    <div id="footer">
+
+    </div>
     <script>
       document.addEventListener('DOMContentLoaded', () => {
-        loadHtml('nav.html', 'header'); // Ensure the path to nav.html is correct
+        loadHtml('nav.html', 'header'); 
+        loadHtml('footer.html', 'footer');
       });
     </script>
     <script type="module" src="consultation.js"></script>
