--- a/footer.html
+++ b/footer.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
+<!-- Coding By CodingNepal - www.codingnepalweb.com -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive Footer HTML and CSS | CodingNepal</title>
+    <!-- Fonts Links For Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link rel="stylesheet" href="footer.css" />
-    <title>Document</title>
   </head>
   <body>
-    <div class="footer-content">
-      <nav class="services">
-        <h1 class="footer-title">Services</h1>
-        <a href="#" class="link link-hover">Branding</a>
-        <a href="#" class="link link-hover">Design</a>
-        <a href="#" class="link link-hover">Marketing</a>
-        <a href="#" class="link link-hover">Advertisement</a>
-      </nav>
-      <nav class="Company">
-        <h1 class="footer-title">Company</h1>
-        <a href="#" class="link link-hover">About us</a>
-        <a href="#" class="link link-hover">Contact</a>
-        <a href="#" class="link link-hover">Jobs</a>
-        <a href="#" class="link link-hover">Press kit</a>
-      </nav>
-      <nav class="Legal">
-        <h1 class="footer-title">Legal</h1>
-        <a href="#" class="link link-hover">Terms of use</a>
-        <a href="#" class="link link-hover">Privacy policy</a>
-        <a href="#" class="link link-hover">Cookie policy</a>
-      </nav>
-      <div class="store">
-        <h1>Download Our App</h1>
-        <img src="../Images/appstore.svg" alt="" />
-        <img src="../Images/playstore.svg" alt="" />
-        <img src="../browser.svg" alt="" />
+    <section class="footer">
+      <div class="footer-row">
+        <div class="footer-col">
+          <h4>Info</h4>
+          <ul class="links">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Compressions</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Collection</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Explore</h4>
+          <ul class="links">
+            <li><a href="#">Free Designs</a></li>
+            <li><a href="#">Latest Designs</a></li>
+            <li><a href="#">Themes</a></li>
+            <li><a href="#">Popular Designs</a></li>
+            <li><a href="#">Art Skills</a></li>
+            <li><a href="#">New Uploads</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Legal</h4>
+          <ul class="links">
+            <li><a href="#">Customer Agreement</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">GDPR</a></li>
+            <li><a href="#">Security</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">Media Kit</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Newsletter</h4>
+          <p>
+            Subscribe to our newsletter for a weekly dose
+            of news, updates, helpful tips, and
+            exclusive offers.
+          </p>
+          <form action="#">
+            <input type="text" placeholder="Your email" required>
+            <button type="submit">SUBSCRIBE</button>
+          </form>
+          <div class="icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
