--- a/landingPage.html
+++ b/landingPage.html
@@ -343,11 +343,13 @@
     </div>
 
     
-
+    <!-- Footer -->
+     <div id="footer"></div>
     <!-- LoadHtml Js -->
     <script>
       document.addEventListener('DOMContentLoaded', () => {
           loadHtml('nav.html', 'header');
+          loadHtml('footer.html', 'footer');
       });
     </script>
 
